fix[ProductCardWide/Component]: fix distortion when the screen change the dimensions

--- a/app/components/Section/Wrapper/styles.module.css
+++ b/app/components/Section/Wrapper/styles.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
     gap: .5em;
 }
